SERVER-17199 Fix compiles on platforms without execinfo.h